--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,11 @@ body{
     font-family: "DM Sans", sans-serif;
 }
 
+a{
+  color: #885df0;
+}
+
+
 .weather-app{
  background-color: white;
  max-width: 600px;
@@ -10,4 +15,82 @@ body{
  padding: 30px;
  border-radius: 10px;
  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+}
+
+header{
+    border-bottom: 1px solid #f9f7f3;
+    padding:  0 0 30px 0;
+}
+
+.search-form-input{
+    background-color: #f9f7f3;
+    border: none;
+    border-radius: 6px;
+    width: 80%;
+    font-size: 16px;
+    padding: 15px 20px;
+}
+
+.search-form-btn{
+    background-color: #885df0;
+    padding: 15px 30px;
+    border: none;
+    font-size: 16px;
+    margin-left: 5px;
+    border-radius: 6px;
+    color: white;
+}
+
+main{
+    padding: 30px 0;
+}
+
+.weather-app-data{
+    display: flex;
+    justify-content: space-between;
+}
+
+.weather-app-city{
+    margin: 0;
+    font-size: 38px;
+    line-height: 48px;
+}
+
+.weather-app-details{
+    font-size: 16px;
+    color: rgba(39, 33, 66, 0.4);
+    line-height: 24px;
+    font-weight: 500;
+}
+
+.weather-app-details strong{
+    color: #f65282;
+}
+
+.weather-app-temperature-container{
+    display: flex;
+}
+
+.weather-app-icon{
+    font-size: 44px;
+    margin-top: 22px;
+}
+
+.weather-app-temperature{
+    font-size: 88px;
+    margin-left: 10px;
+    font-weight: bold;
+}
+
+.weather-app-unit{
+    margin-top: 16px;
+    font-size: 28px;
+}
+
+footer {
+    border-top: 1px solid #f9f7f3;
+    padding: 30px 0 0 0;
+    text-align: center;
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.6);
 }
