added forecast html and css

--- a/src/style.css
+++ b/src/style.css
@@ -88,6 +88,25 @@ main{
     font-size: 28px;
 }
 
+.weather-forcast{
+    margin-top: 20px;
+    text-align: center;
+    color: #000;
+}
+
+.weather-forcast-date{
+    font-size: 16px;
+    opacity: 0.5;
+}
+
+.weather-forecast-temperatures{
+    font-size: 13px;
+}
+
+.weather-forecast-temperature-min{
+    opacity: 0.5;
+}
+
 footer {
     border-top: 1px solid #f9f7f3;
     padding: 30px 0 0 0;
