--- a/src/style.css
+++ b/src/style.css
@@ -88,23 +88,33 @@ main{
     font-size: 28px;
 }
 
-.weather-forcast{
-    margin-top: 20px;
+.weather-forecast{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+    /* margin-top: 20px;
     text-align: center;
-    color: #000;
+    color: #000; */
 }
 
-.weather-forcast-date{
+.weather-forecast-date{
     font-size: 16px;
-    opacity: 0.5;
+    text-align: center;
+    /* opacity: 0.5; */
 }
 
 .weather-forecast-temperatures{
-    font-size: 13px;
+    font-size: 14px;
+    display: flex;
 }
 
-.weather-forecast-temperature-min{
-    opacity: 0.5;
+.weather-forecast-icon{
+    font-size: 36px;
+  text-align: center;
+}
+
+.weather-forecast-temperature{
+    padding: 0 10px;
 }
 
 footer {
