--- a/src/style.css
+++ b/src/style.css
@@ -109,8 +109,10 @@ main{
 }
 
 .weather-forecast-icon{
-    font-size: 36px;
-  text-align: center;
+    width: 80px;
+    height: 80px;
+    display: block;
+    margin: 0 auto;
 }
 
 .weather-forecast-temperature{
